k8s-manifests/overlays/uat/superapp/client/saving/patch/uat-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: equb
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: equb
        image: harbor.cbe.com.et/cbe-superapp/equb-uat:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: budget
        image: harbor.cbe.com.et/cbe-superapp/budget-uat:latest
        imagePullPolicy: 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: vault
        image: harbor.cbe.com.et/cbe-superapp/vault-uat:latest
        imagePullPolicy: Always
