k8s-manifests/overlays/uat/superapp/client/saving/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: equb-route
spec:
  path: /api/v1/cbesuperapp/equbs
  to:
    name: equb-uat
    weight: 100
    kind: Service
  host: uatapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: budget-route
spec:
  path: /api/v1/cbesuperapp/budget-management
  to:
    name: budget-uat
    weight: 100
    kind: Service
  host: uatapisuperapp.cbe.com.et
  port:
    targetPort: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault-route
spec:
  path: /api/v1/cbesuperapp/vault
  to:
    name: vault-uat
    weight: 100
    kind: Service
  host: uatapisuperapp.cbe.com.et
  port:
    targetPort: 8080
